...
            android:checkableBehavior="single">
        <item
                android:id="@+id/nav_group_node_groups"
                android:icon="@drawable/group_icon"
                android:title="@string/nav_group_management_node_groups" />
        <item
                android:id="@+id/nav_group_presets"
                android:icon="@drawable/preset_icon"
                android:title="@string/nav_group_management_presets" />
        <item
                android:id="@+id/nav_group_macros"
                android:icon="@drawable/macro_icon"
                android:title="@string/nav_group_management_macros" />
...
